--- a/index.html
+++ b/index.html
@@ -11,9 +11,42 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
 <body>
+<header>
+	<div class="container">
+		<img class="logo" src="images/logo.png">
+		
+		<nav class="navbar">
+			<a class="item is-active" href="#">
+				Apple
+			</a>
+			<a class="item" href="#">
+				Samsung
+			</a>
+			<a class="item" href="#">
+				Смарфоны и телефоны
+			</a>
+			<a class="item" href="#" data-qa="hover">
+				Ноутбуки и компьютеры
+			</a>
+			<a class="item" href="#">
+				Гаджеты
+			</a>
+			<a class="item" href="#">
+				Планшеты
+			</a>
+			<a class="item" href="#">
+				Фото
+			</a>
+			<a class="item" href="#">
+				Видео
+			</a>
+		</nav>
 
+	</div>
+</header>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
