--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
 <body>
 <header>
 	<div class="container">
-		<img class="logo" src="images/logo.png">
+		<a href="#">
+			<img class="logo" src="images/logo.png">
+		</a>
 		
 		<nav class="navbar">
 			<a class="item is-active" href="#">
